<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/graham_fragme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/label_earnings_per_share"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:text="@string/earnings_per_share"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/input_eps"
        android:layout_width="119dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:layout_below="@id/label_earnings_per_share"
        android:layout_marginLeft="10dp" />

    <TextView
        android:id="@+id/label_pe_ratio"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:text="@string/pe_ratio"
        android:layout_below="@id/input_eps"
        android:layout_marginLeft="10dp" />

    <EditText
        android:id="@+id/input_pe_ratio"
        android:layout_width="122dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/label_pe_ratio"
        android:layout_marginLeft="10dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="8.5" />

    <TextView
        android:id="@+id/label_earnings_growth_rate"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:text="@string/longterm_earnings_growth_rate"
        android:layout_below="@id/input_pe_ratio"
        android:layout_marginLeft="10dp" />

    <EditText
        android:id="@+id/input_earnings_growth"
        android:layout_width="122dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/label_earnings_growth_rate"
        android:ems="10"
        android:inputType="numberDecimal"
        android:layout_marginLeft="10dp" />

    <TextView
        android:id="@+id/label_bond_rate"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:text="@string/_20_year_aaa_corporate_bond_rate"
        android:layout_below="@id/input_earnings_growth"
        android:layout_marginLeft="10dp" />

    <EditText
        android:id="@+id/input_bond_rate"
        android:layout_width="122dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:layout_below="@id/label_bond_rate"
        android:layout_marginLeft="10dp" />

    <TextView
        android:id="@+id/label_rate_of_return"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:text="@string/minimum_required_rate_of_return"
        android:layout_below="@id/input_bond_rate"
        android:layout_marginLeft="10dp" />

    <EditText
        android:id="@+id/input_rate_of_return"
        android:layout_width="122dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/label_rate_of_return"
        android:layout_marginLeft="10dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="4.4" />


    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="Calculate Value"
        android:layout_below="@id/input_rate_of_return" />

    <TextView
        android:id="@+id/label_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button"
        android:layout_toEndOf="@+id/label_rate_of_return"
        android:layout_toRightOf="@+id/label_rate_of_return"
        android:text="@string/value" />

    <TextView
        android:id="@+id/value_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/label_value"
        android:layout_alignStart="@+id/label_value"
        android:layout_below="@+id/label_value"
        android:textAppearance="@android:style/TextAppearance.Material.Large" />




</android.widget.RelativeLayout>